production/carweb.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-1
  namespace: my-app-prod
  labels:
    app: nginx-1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-1
  template:
    metadata:
      labels:
        app: nginx-1
    spec:
      containers:
        - name: nginx-1
          imagePullPolicy: IfNotPresent
          image: rembun/devops:car-web
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: dockerhub-argocd
