production/service-car-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-prod
  namespace: my-app-prod
spec:
  type: ClusterIP
  selector:
    app: nginx-1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
