production/service-config.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-prod
  namespace: my-app-prod
spec:
  type: NodePort
  selector:
    app: nginx-1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30004  # You can choose any available port between 30000-32767
