production/nginx-service-prod-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-service-prod
  namespace: my-app-prod
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: nginx-prod.vega.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service-prod
                port:
                  number: 80
  tls:
    - secretName: nginx-prod-tls
      hosts:
        - nginx-prod.vega.com
